# reggraph

./: .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  TODO.md  app.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
agentic_reg/: __init__.py  _internal.py  agent.py  ask.py  build.py  config.py  domains.py  ingest.py  providers.py  retrieval.py  trace.py
agentic_reg/agents/: __init__.py  specialists.py  state.py  team.py  verifier.py
agentic_reg/domains/: __init__.py  base.py  builtin.py  registry.py
agentic_reg/eval/: __init__.py  __main__.py  eval.py
agentic_reg/eval/baselines/: __init__.py  langgraph_baseline.py
agentic_reg/knowledge/: __init__.py  extract.py  graph.py  proposals.py  symbolic.py  vectors.py
agentic_reg/providers/: __init__.py  anthropic_provider.py  base.py  github_provider.py  ollama_provider.py
data/: gdpr.md  uk_dpa_excerpt.md
tests/: test_agent.py  test_ask.py  test_build.py  test_config.py  test_domains.py  test_eval.py  test_extract.py  test_graph.py  test_ingest.py  test_proposals.py  test_providers.py  test_retrieval.py  test_symbolic.py  test_team.py  test_team_plan.py  test_trace.py  test_vectors.py  test_verifier.py
