[project]
name = "reggraph"
version = "0.0.1"
description = "Auditable multi-agent reasoning over regulatory knowledge graphs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "CrossCraftAI" }]
keywords = ["regulatory", "knowledge-graph", "multi-agent", "rag", "audit", "compliance"]
dependencies = [
    "langgraph>=0.2",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "networkx>=3.3",
    "streamlit>=1.36",
    "pydantic-settings>=2.4",
    "ollama>=0.3",
    "httpx>=0.27",
    "pypdf>=4.0",
]

[project.optional-dependencies]
# `uv sync --extra anthropic` (or pip install '.[anthropic]') adds the Claude provider.
anthropic = ["anthropic>=0.39"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentic_reg"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F = pycodestyle+pyflakes (correctness), I = import sorting, UP = modern syntax, B = bugbears.
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
